--- a/package.json
+++ b/package.json
@@ -3,28 +3,36 @@
   "version": "0.0.1",
   "description": "Library and CLI to explore a RemNote knowledge base.",
   "author": "Hannes Frank (frankhannes@gmail.com)",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "bin": {
-    "rq": "lib/rq.js"
+    "rq": "bin/rq.js"
   },
   "scripts": {
+    "start": "npm run build && npm run install-global",
+    "install-global": "npm i -g",
+    "update-dev": "npm uninstall -g remnote-query && npm install -g",
+    "build": "npm run clean && tsc -p .",
+    "build:watch": "tsc -w -p .",
     "run": "npx ts-node ./src/index.ts match test",
-    "build:watch": "tsc -w",
-    "run:watch": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
-    "run:build": "node lib/index.js",
-    "update-dev": "npm uninstall -g remnote-query && npm install -g ."
+    "run:js": "node lib/index.js",
+    "tscov": "tscov --min-coverage 90",
+    "tscov:d": "tscov --details",
+    "publish": "npm run build && npm publish",
+    "clean": "rm -rf lib"
   },
   "dependencies": {
     "chalk": "^4.1.1",
     "commander": "^7.2.0",
     "jszip": "^3.6.0",
     "lunr": "^2.3.9",
-    "ts-node": "^9.1.1"
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
-    "@types/chalk": "^2.2.0",
     "@types/lunr": "^2.3.3",
     "@types/node": "^15.0.2",
-    "nodemon": "^2.0.7"
+    "live-server": "^1.2.1",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
