--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
      npx tsc --init --rootDir src --outDir lib --esModuleInterop --resolveJsonModule --lib es6,dom  --module commonjs 
      */
     "exclude": [
-        "./node_modules"
+        "./node_modules",
+        "./lib",
     ],
     "compilerOptions": {
         /* Visit https://aka.ms/tsconfig.json to read more about this file */
@@ -30,7 +31,7 @@
         // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
         // "removeComments": true,                      /* Do not emit comments to output. */
         // "noEmit": true,                              /* Do not emit outputs. */
-        // "importHelpers": true,                       /* Import emit helpers from 'tslib'. */
+        "importHelpers": true,                       /* Import emit helpers from 'tslib'. */
         // "downlevelIteration": true,                  /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
         // "isolatedModules": true,                     /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
         /* Strict Type-Checking Options */
